add tailwind, layouts, live reload

--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -1,24 +1,5 @@
-<!DOCTYPE html >
-  <html lang="en">
-    <head>
-      <%- include('../partials/head'); %>
-    </head>
-    <body class="container">
-
-      <header>
-        <%- include('../partials/header'); %>
-      </header>
-
-      <main>
-        <div class="jumbotron">
-          <h1>This is great</h1>
-          <p>Welcome to templating using EJS</p>
-        </div>
-      </main>
-
-      <footer>
-        <%- include('../partials/footer'); %>
-      </footer>
-
-    </body>
-  </html>
+<div
+  class="text-gray-700 flex items-center flex-col justify-center w-full h-full"
+>
+  <h1>Let's start to generate HTML pages !</h1>
+</div>
