--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,1 +1,6 @@
-<p class="text-center text-muted">&copy; Copyright 2020 The Awesome People</p>
+<div class="text-center p-6 bg-gray-200">
+  <span>© 2022 Copyright:</span>
+  <a class="text-gray-600 font-semibold" href="https://tailwind-elements.com/"
+    >Wilders</a
+  >
+</div>
