--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,11 +1,25 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand" href="/">EJS Is Fun</a>
-  <ul class="navbar-nav mr-auto">
-    <li class="nav-item">
-      <a class="nav-link" href="/">Home</a>
+<nav class="w-full py-4 bg-gray-100 text-gray-500 shadow-lg px-8">
+  <ul class="flex list-style-none mr-auto items-center ml-4">
+    <li class="pr-2">
+      <a
+        class="text-gray-500 hover:text-gray-700 focus:text-gray-700 p-0"
+        href="/"
+        >Home</a
+      >
     </li>
-    <li class="nav-item">
-      <a class="nav-link" href="/about">About</a>
+    <li class="pr-2">
+      <a
+        class="text-gray-500 hover:text-gray-700 focus:text-gray-700 p-0"
+        href="#"
+        >Products</a
+      >
+    </li>
+    <li class="pr-2">
+      <a
+        class="text-gray-500 hover:text-gray-700 focus:text-gray-700 p-0"
+        href="#"
+        >Categories</a
+      >
     </li>
   </ul>
 </nav>
