--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,6 +1,6 @@
 <div class="text-center p-6 bg-gray-200">
   <span>© 2022 Copyright:</span>
-  <a class="text-gray-600 font-semibold" href="https://tailwind-elements.com/"
+  <a class="text-gray-600 font-semibold" href="https://wildcodeschool.com/"
     >Wilders</a
   >
 </div>
