--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -10,7 +10,7 @@
     <li class="pr-2">
       <a
         class="text-gray-500 hover:text-gray-700 focus:text-gray-700 p-0"
-        href="#"
+        href="/products"
         >Products</a
       >
     </li>
