--- a/src/views/pages/products.ejs
+++ b/src/views/pages/products.ejs
@@ -31,7 +31,7 @@
             focusable="false"
             data-prefix="far"
             data-icon="star"
-            class="w-4 text-yellow-500"
+            class="w-4 text-yellow-500 mr-1"
             role="img"
             xmlns="http://www.w3.org/2000/svg"
             viewBox="0 0 576 512"
