Beginning of the main page with logo on the nav and hero space

--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -1,5 +1,13 @@
+<div class="bg-cover bg-[url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRhcsL2UQpttfxlKiOgoUxsWAbcVvv4suzLkA&usqp=CA')] h-96 p-12 flex justify-end">
+  <div class="basis-1/2">
+    <h1 class="text-white text-5xl text-center w-96">Let's start discovering a brand new World</h1>
+    <button class="mt-12 w-96 h-20 text-white text-center bg-gray-700 rounded-2xl">Contactez nous</button>
+  </div>
+</div>
+
 <div
-  class="text-gray-700 flex items-center flex-col justify-center w-full h-full"
+  class="text-gray-700 flex items-center flex-col justify-center"
 >
   <h1>Let's start to generate HTML pages !</h1>
+  
 </div>
