--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -1,4 +1,5 @@
-<nav class="w-full py-4 bg-gray-100 text-gray-500 shadow-lg px-8">
+<nav class="w-full py-4 bg-gray-100 text-gray-500 shadow-lg px-8 flex">
+  <img src="https://w7.pngwing.com/pngs/621/196/png-transparent-e-commerce-logo-logo-e-commerce-electronic-business-ecommerce-angle-text-service.png" alt="Logo de notre E-commerce" class="w-20">
   <ul class="flex list-style-none mr-auto items-center ml-4">
     <li class="pr-2">
       <a
@@ -12,13 +13,6 @@
         class="text-gray-500 hover:text-gray-700 focus:text-gray-700 p-0"
         href="/products"
         >Products</a
-      >
-    </li>
-    <li class="pr-2">
-      <a
-        class="text-gray-500 hover:text-gray-700 focus:text-gray-700 p-0"
-        href="#"
-        >Categories</a
       >
     </li>
   </ul>
