--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -1,6 +1,23 @@
+
 <div class="text-center p-6 bg-gray-200">
-  <span>© 2022 Copyright:</span>
-  <a class="text-gray-600 font-semibold" href="https://wildcodeschool.com/"
-    >Wilders</a
-  >
+  <div class="flex m-24">
+    <div class="basis-1/2">
+      <div>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d10841.06239491457!2d-1.5475514!3d47.2113852!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xe5aaf780b1ea1c91!2sWild%20Code%20School%20-%20Training%20D%C3%A9veloppeur%20Web%20Et%20Data%20Analyst!5e0!3m2!1sen!2sfr!4v1664983370897!5m2!1sen!2sfr" width="100%" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+      </div>
+      <span>© 2022 Copyright:</span>
+      <a class="text-gray-600 font-semibold" href="https://wildcodeschool.com/">Wilders</a>
+    </div>
+    <div class="basis-1/2">
+      <form class="flex flex-col m-12">
+        <label for="name">Your name</label>
+        <input type="text" id="name" name="name">
+        <label for="subject">Subject</label>
+        <input type="text" id="subject" name="name">
+        <label for="message">Your message</label>
+        <textarea name="message" id="message" cols="30" rows="10"></textarea>
+        <button class="mt-12 w-96 h-20 text-white text-center bg-gray-700 rounded-2xl" type="submit">Send !!!</button>
+      </form>
+    </div>
+  </div>
 </div>
