Ajout du controller et model pour les catégories en page d'acceuil

--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -21,5 +21,11 @@
   </div>
 </section>
 <section>
-  
+  <ul>
+
+    <% categories.forEach(function(category) { %>
+      <li><%= category.label %></li>
+    <%}) %>
+  </ul>
+    
 </section>
