Implementing the listing of the categories with some style

--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -1,7 +1,7 @@
 <section class="bg-cover bg-[url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRhcsL2UQpttfxlKiOgoUxsWAbcVvv4suzLkA&usqp=CA')] h-96 p-12 flex justify-end">
   <div class="basis-1/2">
     <h1 class="text-white text-5xl text-center w-96">Let's start discovering a brand new World</h1>
-    <button class="mt-12 w-96 h-20 text-white text-center bg-gray-700 rounded-2xl">Contact us</button>
+    <button class="mt-12 w-96 h-20 text-white text-center bg-gray-400 rounded-2xl hover:bg-gray-700 transition duration-300">Contact us</button>
   </div>
 </section>
 <section class="text-gray-700 flex items-center justify-around m-24">
@@ -20,11 +20,18 @@
     Porro nobis atque laboriosam, voluptatem perferendis sapiente eveniet accusantium, libero deleniti eum mollitia, ab praesentium excepturi quia repudiandae dolor quam reprehenderit consequuntur dignissimos facilis sed error. Accusantium harum nisi excepturi.</p>
   </div>
 </section>
-<section>
-  <ul>
+<section class="m-24">
+  <h2 class="text-center text-3xl m-4">Ours categories</h2>
+  <p class="mt-8 mb-8">Lorem ipsum dolor sit amet consectetur adipisicing elit. Est tenetur sint molestias eum eius sequi obcaecati fugiat dolorum animi! Sequi, repellat fugit est adipisci incidunt necessitatibus vero magnam corporis debitis!
+  Deserunt eveniet ipsam atque incidunt consectetur id amet ullam nulla a sunt quas accusamus, aliquid exercitationem repudiandae aspernatur earum ratione laudantium corrupti sequi voluptate maiores. Aspernatur distinctio officia repudiandae blanditiis.</p>
+  <ul class="flex justify-around gap-2">
 
     <% categories.forEach(function(category) { %>
-      <li><%= category.label %></li>
+      <div class="border rounded-2xl p-4 shadow-gray-400 shadow-lg hover:shadow-gray-700 transition duration-150">
+
+        <li class="text-1xl text-center m-2"><%= category.label.toUpperCase(); %></li>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Officiis, quo porro optio autem hic ipsum aperiam quia? At facere pariatur asperiores delectus magni, fugiat repudiandae ut consequatur ipsam impedit beatae?</p>
+      </div>
     <%}) %>
   </ul>
     
