Restyling on the footer, id and anchor

--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -8,7 +8,8 @@
       <span>© 2022 Copyright:</span>
       <a class="text-gray-600 font-semibold" href="https://wildcodeschool.com/">Wilders</a>
     </div>
-    <div class="basis-1/2">
+    <div class="basis-1/2" id="contact" anchor="contact">
+      <h3 class="text-center">Contact US</h3>
       <form class="flex flex-col m-12">
         <label for="name">Your name</label>
         <input type="text" id="name" name="name">
@@ -16,7 +17,7 @@
         <input type="text" id="subject" name="name">
         <label for="message">Your message</label>
         <textarea name="message" id="message" cols="30" rows="10"></textarea>
-        <button class="mt-12 w-96 h-20 text-white text-center bg-gray-700 rounded-2xl" type="submit">Send !!!</button>
+        <button class="mt-12 w-96 h-20 text-white text-center bg-gray-400 rounded-2xl hover:bg-gray-700" type="submit">Send !!!</button>
       </form>
     </div>
   </div>
