--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -15,5 +15,12 @@
         >Products</a
       >
     </li>
+    <li class="pr-2">
+      <a
+        class="text-gray-500 hover:text-gray-700 focus:text-gray-700 p-0"
+        href="#contact"
+        >Contact</a
+      >
+    </li>
   </ul>
 </nav>
