Implementing the link on the CTA

--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -1,7 +1,11 @@
 <section class="bg-cover bg-[url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRhcsL2UQpttfxlKiOgoUxsWAbcVvv4suzLkA&usqp=CA')] h-96 p-12 flex justify-end">
   <div class="basis-1/2">
     <h1 class="text-white text-5xl text-center w-96">Let's start discovering a brand new World</h1>
-    <button class="mt-12 w-96 h-20 text-white text-center bg-gray-400 rounded-2xl hover:bg-gray-700 transition duration-300">Contact us</button>
+    <a href="#contact">
+      <button class="mt-12 w-96 h-20 text-white text-center bg-gray-400 rounded-2xl hover:bg-gray-700 transition duration-300">
+        Contact us
+      </button>
+    </a>
   </div>
 </section>
 <section class="text-gray-700 flex items-center justify-around m-24">
