--- a/src/views/pages/index.ejs
+++ b/src/views/pages/index.ejs
@@ -30,7 +30,7 @@
   Deserunt eveniet ipsam atque incidunt consectetur id amet ullam nulla a sunt quas accusamus, aliquid exercitationem repudiandae aspernatur earum ratione laudantium corrupti sequi voluptate maiores. Aspernatur distinctio officia repudiandae blanditiis.</p>
   <ul class="flex justify-around gap-2">
 
-    <% categories.forEach(function(category) { %>
+    <% categories.forEach((category) => { %>
       <div class="border rounded-2xl p-4 shadow-gray-400 shadow-lg hover:shadow-gray-700 transition duration-150">
 
         <li class="text-1xl text-center m-2"><%= category.label.toUpperCase(); %></li>
