Arrow function in place of old function in forEach loop

--- a/src/views/pages/products.ejs
+++ b/src/views/pages/products.ejs
@@ -1,5 +1,5 @@
 <div class="grid grid-cols-3 gap-4 max-w-5xl my-8 mx-auto">
-  <% products.forEach(function(product) { %>
+  <% products.forEach((product) => { %>
   <acticle>
     <a
       href="/product/<%= product.id %>"
