--- a/src/views/partials/footer.ejs
+++ b/src/views/partials/footer.ejs
@@ -8,15 +8,15 @@
     </div>
     <div class="basis-1/2" id="contact" anchor="contact">
       <h3 class="text-center text-3xl">Contact US</h3>
-      <form class="flex flex-col m-12">
+      <form class="flex flex-col m-12" action="/contact" method="POST" name="contactform">
         <label for="name">Your name</label>
         <input type="text" id="name" name="name">
         <label for="subject">Subject</label>
-        <input type="text" id="subject" name="name">
+        <input type="text" id="subject" name="subject">
         <label for="message">Your message</label>
         <textarea name="message" id="message" cols="30" rows="10"></textarea>
         <div class="flex justify-center">
-          <button class="mt-12 w-96 h-20 text-white text-center bg-gray-400 rounded-2xl hover:bg-gray-700" type="submit">Send !!!</button>
+          <button type="submit" class="mt-12 w-96 h-20 text-white text-center bg-gray-400 rounded-2xl hover:bg-gray-700" type="submit">Send !!!</button>
         </div>
       </form>
     </div>
